fix & test liveness and loop analyses